# rclone

./: pyproject.toml
.github/workflows/: poetry-build.yml
rclone/: rclone.py
