[tool.poetry]
name = "rclone"
version = "0.0.1"
description = "Python wrapper for rclone"
authors = ["Alyetama <56323389+Alyetama@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1"
loguru = ">=0.5.3"
tqdm = ">=4.62.3"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = {version = "^22.12.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
